WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307446
[threaded-animations] multiple View Transitions tests crash with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=307446
Summary
[threaded-animations] multiple View Transitions tests crash with "Threaded Ti...
Antoine Quint
Reported
2026-02-10 09:26:09 PST
The enablement PR for "Threaded Time-based Animations" PR at
https://github.com/WebKit/WebKit/pull/57620
identified that these tests crash in debug builds on macOS: - http/wpt/css/css-view-transitions/navigation/cross-origin-bfcache.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/at-rule-in-layer-cascade-external-stylesheet.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/at-rule-in-layer-cascade.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/at-rule-in-layer.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/at-rule-in-matching-media.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/at-rule-opt-in-change-with-script.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pagereveal-microtask-sequence.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pagereveal-updatecallbackdone-promise.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pagereveal-with-view-transition.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-replace-navigation.html - imported/w3c/web-platform-tests/css/css-view-transitions/navigation/with-types/types-in-pagereveal-and-pageswap.html - imported/w3c/web-platform-tests/css/css-view-transitions/style-inheritance.html - swipe/swipe-disables-view-transition.html They all crash because of the same failed `willBeComposited == needsToBeComposited(layer, queryData)` assertion under `RenderLayerCompositor::computeCompositingRequirements()`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-10 09:26:16 PST
<
rdar://problem/170065802
>
Antoine Quint
Comment 2
2026-02-10 09:48:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58309
EWS
Comment 3
2026-02-10 11:37:26 PST
Committed
307197@main
(24fe4db710ae): <
https://commits.webkit.org/307197@main
> Reviewed commits have been landed. Closing PR #58309 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug