Source/WebCore/animation/KeyframeEffect.cpp
@@ -1652,20 +1652,37 @@ OptionSet<AnimationImpact> KeyframeEffect::apply(RenderStyle& targetStyle, const
     return impact;
 }
 
+bool KeyframeEffect::isRunningAccountingForSuspension() const
+{
+    RefPtr animation = this->animation();
+    if (!animation)
+        return false;
+    if (animation->isSuspended())
+        return false;
+    return m_isAssociatedWithProgressBasedTimeline || animation->playState() == WebAnimation::PlayState::Running;
+}
+
 bool KeyframeEffect::isRunningAccelerated() const
 {
 #if ENABLE(THREADED_ANIMATIONS)
-    if (canHaveAcceleratedRepresentation()) {
-        if (!m_inTargetEffectStack || !canBeAccelerated())
-            return false;
-        ASSERT(animation());
-        Ref animation = *this->animation();
-        if (animation->isSuspended())
-            return false;
-        return m_isAssociatedWithProgressBasedTimeline || animation->playState() == WebAnimation::PlayState::Running;
-    }
+    // Effects that have an accelerated representation are considered to be running
+    // provided they have at least one animated property.
+    if (canHaveAcceleratedRepresentation())
+        return m_acceleratedRepresentation && !m_acceleratedRepresentation->animatedProperties().isEmpty() && isRunningAccountingForSuspension();
 #endif
     return m_runningAccelerated == RunningAccelerated::Yes;
+}
+
+bool KeyframeEffect::isAboutToRunAccelerated() const
+{
+#if ENABLE(THREADED_ANIMATIONS)
+    // Effects that have an accelerated representation cannot be about to run accelerated since
+    // they are either running or were considered for running but failed to be accelerated.
+    if (canHaveAcceleratedRepresentation())
+        return !m_acceleratedRepresentation && m_inTargetEffectStack && canBeAccelerated() && isRunningAccountingForSuspension();
+#endif
+    // FIXME: This ignores the fact that some timing functions can prevent acceleration.
+    return m_acceleratedPropertiesState != AcceleratedProperties::None && m_lastRecordedAcceleratedAction != AcceleratedAction::Stop;
 }
 
 bool KeyframeEffect::isCurrentlyAffectingProperty(CSSPropertyID property, Accelerated accelerated) const
